8297286: runtime/vthread tests crashing after JDK-8296324