src/java.base/share/classes/java/lang/VirtualThread.java
@@ -270,11 +270,10 @@ final class VirtualThread extends BaseVirtualThread {
     @ChangesCurrentThread
     private void run(Runnable task) {
         assert state == RUNNING;
-        boolean notifyJvmti = notifyJvmtiEvents;
 
         // first mount
         mount();
-        if (notifyJvmti) notifyJvmtiMountEnd(true);
+        if (notifyJvmtiEvents) notifyJvmtiMountEnd(true);
 
         // emit JFR event if enabled
         if (VirtualThreadStartEvent.isTurnedOn()) {
@@ -302,7 +301,7 @@ final class VirtualThread extends BaseVirtualThread {
 
             } finally {
                 // last unmount
-                if (notifyJvmti) notifyJvmtiUnmountBegin(true);
+                if (notifyJvmtiEvents) notifyJvmtiUnmountBegin(true);
                 unmount();
 
                 // final state
