test/lib/jdk/test/whitebox/WhiteBox.java
@@ -738,4 +738,6 @@ public class WhiteBox {
   public native void lockCritical();
 
   public native void unlockCritical();
+
+  public native boolean setVirtualThreadsNotifyJvmtiMode(boolean enabled);
 }
